--- a/docs/簡易仕様書.md
+++ b/docs/簡易仕様書.md
@@ -1,44 +1,92 @@
 # 簡易仕様書
 
 ### アプリ名
-
+りんくろ
 
 #### コンセプト
-食べに行きたいお店がすぐ見つかる。
+食べに行きたいお店がすぐ見つかる
 
 #### こだわったポイント
+デザイン面
+* 食欲を増すと言われる「赤や茶色」といった配色を用いた
+* 馴染みやすいように、似たようなサービスによく見られるデザインを取り入れた
+* ページ移動のボタンを上下に配置し、ページ移動のストレスを軽減を図る
 
+機能面
+* ページの表示内容をURLで管理しているのでブラウザの進むや戻るをしても検索結果のページングや詳細画面から戻ってきたりできる
+
+開発面
+* NextJsを使ってサーバーを用意せずに開発できた
+* NextJsはページ移動してもStateが保存されるので、それを利用したページング機能
 
 ### 公開したアプリの URL（Store にリリースしている場合）
 
-
 ### 該当プロジェクトのリポジトリ URL（GitHub,GitLab など Git ホスティングサービスを利用されている場合）
-
+https://github.com/qriquri/rinculo
 
 ## 開発環境
 ### 開発環境
-
+Windows11
 
 ### 開発言語
-
+TypeScript
 
 ## 動作対象端末・OS
 ### 動作対象OS
-
+Windows11, Android10
 
 ## 開発期間
-
+2023/11/6~2023/11/20
 
 ## アプリケーション機能
-
 ### 機能一覧
-
+* 現在位置からの検索範囲を指定した店舗を検索できる
+* 店舗の検索結果の一覧表示する
+* それぞれの店舗をクリックすると、店舗の詳細画面表示する
 
 ### 画面一覧
+検索結果画面
+![](<./imgs/home.png>)
+
+詳細画面
+![](<./imgs/detail.png>)
 
 
 ### 使用しているAPI,SDK,ライブラリなど
+フレームワーク
+* NextJs@14.0.2
 
+ライブラリ
+* React@^18
+* MUI@5.14
+* react-redux@^8.1.3
+
+API
+* ホットペッパーグルメサーチAPI
 
 ### アドバイスして欲しいポイント
+ホットペーパーグルメAPIのクエリに渡す値を間違えないようにするために、随分回りくどいことをしてしまったような気がします。検索範囲の指定が距離の値ではなくインデックスだったので、[SearchOptions.ts](../client/src/entities/SearchOptions.ts)のようにもあるように記述しましたが、もっとスマートに型の安全性を保つ方法はあるのでしょうか。
+``` ts
+export const SearchRange = {
+  "300": "1",
+  "500": "2",
+  "1000": "3",
+  "2000": "4",
+  "3000": "5",
+} as const;
+export type SearchRangeLabel = (typeof SearchRange)[keyof typeof SearchRange];
+export const SearchRanges = objectKeys(SearchRange);
 
+const toMatchRangeLabel = (value: string): SearchRangeLabel | undefined => {
+  switch (value) {
+    case "1":
+    case "2":
+    case "3":
+    case "4":
+    case "5":
+      return value as SearchRangeLabel
+  }
+}
+```
+
+また、ページ移動の関係で、クエリから取得した値をステートに入れる必要があったのですが、変に型を作ったせいで、代入にひと手間かかっているので、そこまでする必要があったのかが疑問です。
