--- a/docs/簡易仕様書.md
+++ b/docs/簡易仕様書.md
@@ -52,6 +52,15 @@ Windows11, Android10
 * 店舗の検索時にジャンルを選択できる
 * 店舗詳細画面に周辺地図を表示
 
+### デザイン案
+figmaで作成
+
+検索結果画面
+![](<./imgs/デザイン案_iPhone SE - 1.png>)
+
+詳細画面
+![](<./imgs/デザイン案_iPhone SE - 2.png>)
+
 ### 画面一覧
 検索結果画面
 ![](<./imgs/home.png>)
